# airflow_duckdb_etl

./: README.md  exemplo_00.py  pyproject.toml
frontend/: exemplo_04.py
