[tool.poetry]
name = "airflow-duckdb-etl"
version = "0.1.0"
description = ""
authors = ["Marcelo Feliciani <marcelo.feliciani@datalakers.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
